# ShowFlow

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.css
assets/i18n/: en-US.ftl  uk-UA.ftl
src/: main.rs
src/app/: mod.rs  router.rs  state.rs
src/component/: languages.rs  mod.rs  themes.rs
src/component/icon/: cancel.rs  close.rs  exit.rs  folder.rs  language.rs  menu.rs  mod.rs  play.rs  question.rs  refresh.rs  repeat.rs  settings.rs  skip.rs  stack.rs  theme.rs  view.rs
src/element/: header.rs  layout.rs  menu.rs  mod.rs
src/model/: current.rs  entry.rs  mod.rs  pair.rs
src/page/: finish.rs  home.rs  loading.rs  manager.rs  mod.rs  show.rs
src/service/: config.rs  i18n.rs  launcher.rs  mod.rs  thumbnail.rs
