[package]
name = "show_flow"
version = "0.0.1"
authors = ["a.shlyakhto <a.shlyakhto@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.0", features = ["router", "signals"] }
#dioxus-i18n = { version = "0.4.3" }
csv = { version = "1.3.1" }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
windows = { version = "0.61.1" }
image ={ version = "0.25.6" }
base64 = { version = "0.22.1" }
opener = { version = "0.8.1", features = ["reveal"] }
#directories = { version = "6.0.0" }
regex = { version = "1.11.1" }
rfd = { version = "0.15.3" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
